fixed funky center alignment

--- a/pennfitness/css/basic.css
+++ b/pennfitness/css/basic.css
@@ -9,6 +9,7 @@ body {
 
 .yui-skin-sam .yui-layout { 
 	background-color: #003; 
+	text-align: left;
 } 
 
 .yui-skin-sam .yui-layout .yui-resize-proxy div { 
